@@ -1,12 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::EC_KEY : pointer {
-  
-  # Class Methods
-  native static method new_by_curve_name : Net::SSLeay::EC_KEY ($nid : int);
-  
-  # Instance Methods
-  native method DESTROY : void ();
-  
-}
